# csp-solver

./: .clang-format  .classpath  .env  .env.example  .flaskenv  .gitignore  .project  CLAUDE.md  CSP.java  CSPSolver.java  Constraint.java  Futoshiki.java  Pair.java  README.md  Reader.java  app.wsgi  app.wsgi   csp.py  docker-compose.prod.yml  docker-compose.yml  futoshiki.py  pyproject.toml  requirements.txt  sudoku.py
backend/: CLAUDE.md  Dockerfile  pyproject.toml
backend/docs/: csp_optimization.md
backend/scripts/: generate_templates.py
backend/src/csp_solver/api/: main.py
backend/src/csp_solver/api/models/: board.py
backend/src/csp_solver/api/routes/: board.py  health.py
backend/src/csp_solver/data/sudoku_solutions/2/: board-0.json  board-10.json  board-9.json
backend/src/csp_solver/data/sudoku_solutions/3/: board-0.json  board-1.json  board-10.json  board-11.json  board-12.json  board-13.json  board-14.json  board-15.json  board-16.json  board-17.json  board-18.json  board-19.json  board-2.json  board-20.json  board-21.json  board-22.json  board-23.json  board-24.json  board-25.json  board-26.json  board-27.json  board-28.json  board-29.json  board-3.json  board-30.json  board-31.json  board-32.json  board-33.json  board-34.json  board-35.json  board-36.json  board-37.json  board-38.json  board-39.json  board-4.json  board-40.json  board-41.json  board-42.json  board-43.json  board-44.json  (+60 more)
backend/src/csp_solver/data/sudoku_solutions/4/: board-10.json  board-11.json  board-7.json  (+1 more)
backend/src/csp_solver/solver/: bitset_domain.py  constraints.py  csp.py  futoshiki.py  gac_alldiff.py  local_search.py  nogoods.py  pruning.py  sudoku.py  sudoku_gen.py  sudoku_transforms.py
backend/tests/: test_api.py  test_benchmarks.py  test_solver.py  test_stress.py
(+401 files in other folders)
