[tool.poetry]
name = "csp-solver"
version = "0.1.0"
description = ""
authors = ["Mike Babb <mike7400@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
numpy = "^1.21.4"
Flask = "^2.0.2"
mypy = "^0.910"

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
