[tool.poetry]
authors = ["Mike Babb <mike7400@gmail.com>"]
description = ""
name = "csp-solver"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
python-dotenv = "^0.19.2"
numpy = "^1.21.4"
Flask = "^2.0.2"
mypy = "^0.910"

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
